WIP: Handling Skill snapshot